# thinking-coach

./: .env.example  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
commands/: coach.md  digest.md  goals.md  import-claude-export.md  onboard.md  schedule.md  seed.md  settings.md  status.md  storage.md
hooks/: capture.py  hooks.json
scheduler/: cron.example  mirror-coach.service  mirror-coach.timer  mirror-digest.service  mirror-digest.timer
scripts/: dev-setup.sh
src/mirror/: __init__.py  __main__.py  analysis.py  claude_export.py  cleanup.py  cli.py  coach.py  digest.py  features.py  insights_writer.py  llm_router.py  memory_store.py  paths.py  schema.py  settings.py  state.py  transcript.py
src/mirror/prompts/: goal_alignment.md  memory_synthesis.md  prompt_intent.md  topic_depth.md  verification_assimilation.md
tests/: test_cleanup.py  test_cli_goals.py  test_cli_seed.py  test_coach.py  test_memory_store.py  test_state_digest_export.py  test_transcript_analysis.py
tests/fixtures/: conversations.json  sample_session.jsonl  verified_session.jsonl
